<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btn_main_new_chat"
        android:title="@string/newChat" />

    <item
        android:id="@+id/btn_main_chat_logout"
        android:title="@string/logout" />

    <item
        android:id="@+id/btn_chat_menu_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/chat_delete"
        app:showAsAction="always"
        android:visible="false"
        />

    <item
        android:id="@+id/btn_cancel_delete"
        android:icon="@drawable/ic_clear"
        android:title="@string/chat_cancel_delete"
        app:showAsAction="always"
        android:visible="false"
        />
</menu>